Bug 319129 - fix llvm-clang bug report
Summary: fix llvm-clang bug report
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-30 19:21 UTC by Ralf Habacker
Modified: 2013-05-30 08:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-04-30 19:21:04 UTC
running clang analyzer over umbrello source resports bugs. 


Reproducible: Always

Steps to Reproduce:
1.  configure umbrello build dir according to http://garykramlich.blogspot.de/2011/10/using-scan-build-from-clang-with-cmake.html
2. run scan-build make inside the build dir


Actual Results:  
scan-build reports that 5 bugs has been found.

Bug Group 	Bug Type 	        File                   	Line 	
Dead store	Dead assignment	assocrules.cpp	70
Dead store	Dead assignment	codegenerators /cpp /cppwriter.cpp	420
Dead store	Dead assignment	widgets /classifierwidget.cpp	495
Dead store	Dead assignment	codegenerators /d /dwriter.cpp	335
Dead store	Dead initialization	codegenerators /ruby /rubywriter.cpp	269


Expected Results:  
scan-build should report zero bugs.
Comment 1 Ralf Habacker 2013-04-30 19:49:38 UTC
Git commit e956609ca6eb3b5d206c37556229f3fcee88f5f2 by Ralf Habacker.
Committed on 30/04/2013 at 21:48.
Pushed by habacker into branch 'master'.

Fix of llvm-clang bug reports.

M  +4    -0    ChangeLog
M  +1    -1    umbrello/assocrules.cpp
M  +1    -1    umbrello/codegenerators/cpp/cppwriter.cpp
M  +1    -1    umbrello/codegenerators/d/dwriter.cpp
M  +1    -3    umbrello/codegenerators/ruby/rubywriter.cpp
M  +2    -4    umbrello/widgets/classifierwidget.cpp

http://commits.kde.org/umbrello/e956609ca6eb3b5d206c37556229f3fcee88f5f2
Comment 2 Ralf Habacker 2013-05-30 08:13:00 UTC
Git commit 3ad19d332176bb4a21e0bb5e1c3450590bf35c04 by Ralf Habacker.
Committed on 30/04/2013 at 21:48.
Pushed by habacker into branch 'KDE/4.10'.

Fix of llvm-clang bug reports.

M  +4    -0    ChangeLog
M  +1    -1    umbrello/assocrules.cpp
M  +1    -1    umbrello/codegenerators/cpp/cppwriter.cpp
M  +1    -1    umbrello/codegenerators/d/dwriter.cpp
M  +1    -3    umbrello/codegenerators/ruby/rubywriter.cpp
M  +2    -4    umbrello/widgets/classifierwidget.cpp

http://commits.kde.org/umbrello/3ad19d332176bb4a21e0bb5e1c3450590bf35c04