Fix of llvm-clang bug reports.

BUG: 319129